Was able to reduce a part of the js code lines(1)

--- a/Calculator (dark mode).html
+++ b/Calculator (dark mode).html
@@ -38,26 +38,26 @@
                     <button id="multiply" onclick="displaybuttons3()">×</button>
                 </div>
                 <div class="second">
-                    <button id="7" onclick="displaybuttons4()">7</button>
-                    <button id="8" onclick="displaybuttons5()">8</button>
-                    <button id="9" onclick="displaybuttons6()">9</button>
-                    <button id="square-root" onclick="displaybuttons7()">√</button>
+                    <button id="7">7</button>
+                    <button id="8">8</button>
+                    <button id="9">9</button>
+                    <button id="square-root" onclick="displaybuttons17()">√</button>
                 </div>
                 <div class="third">
-                    <button id="4" onclick="displaybuttons8()">4</button>
-                    <button id="5" onclick="displaybuttons9()">5</button>
-                    <button id="6" onclick="displaybuttons10()">6</button>
+                    <button id="4">4</button>
+                    <button id="5">5</button>
+                    <button id="6">6</button>
                     <button id="subtract" onclick="displaybuttons11()">-</button>
                 </div>
                 <div class="fourth">
-                    <button id="1" onclick="displaybuttons12()">1</button>
-                    <button id="2" onclick="displaybuttons13()">2</button>
-                    <button id="3" onclick="displaybuttons14()">3</button>
+                    <button id="1">1</button>
+                    <button id="2">2</button>
+                    <button id="3">3</button>
                     <button id="add" onclick="displaybuttons17()">+</button>
                 </div>
                 <div class="fifth">
                     <button id="." onclick="displaybuttons15()">.</button>
-                    <button id="0" onclick="displaybuttons16()">0</button>
+                    <button id="0">0</button>
                     <button id="equal-to" onclick="calculation()">=</button>
                 </div>
 
