Was able to reduce the some js code lines(2)

--- a/Calculator (dark mode).html
+++ b/Calculator (dark mode).html
@@ -32,31 +32,31 @@
             
             <div class="buttons">
                 <div class="first">
-                    <button id="c" onclick="clearscreen()">C</button>
-                    <button id="divide" onclick="displaybuttons1()">÷</button>
-                    <button id="percentage" onclick="displaybuttons2()">%</button>
-                    <button id="multiply" onclick="displaybuttons3()">×</button>
+                    <button id="c">C</button>
+                    <button id="divide">÷</button>
+                    <button id="percentage">%</button>
+                    <button id="multiply">×</button>
                 </div>
                 <div class="second">
                     <button id="7">7</button>
                     <button id="8">8</button>
                     <button id="9">9</button>
-                    <button id="square-root" onclick="displaybuttons17()">√</button>
+                    <button id="square-root">√</button>
                 </div>
                 <div class="third">
                     <button id="4">4</button>
                     <button id="5">5</button>
                     <button id="6">6</button>
-                    <button id="subtract" onclick="displaybuttons11()">-</button>
+                    <button id="subtract">-</button>
                 </div>
                 <div class="fourth">
                     <button id="1">1</button>
                     <button id="2">2</button>
                     <button id="3">3</button>
-                    <button id="add" onclick="displaybuttons17()">+</button>
+                    <button id="add">+</button>
                 </div>
                 <div class="fifth">
-                    <button id="." onclick="displaybuttons15()">.</button>
+                    <button id=".">.</button>
                     <button id="0">0</button>
                     <button id="equal-to" onclick="calculation()">=</button>
                 </div>
