--- a/Calculator (dark mode).html
+++ b/Calculator (dark mode).html
@@ -58,7 +58,7 @@
                 <div class="fifth">
                     <button id=".">.</button>
                     <button id="0">0</button>
-                    <button id="equal-to" onclick="calculation()">=</button>
+                    <button id="equal-to">=</button>
                 </div>
 
             </div>
