--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
             <div class="buttons">
                 <div class="first">
                     <button id="c">C</button>
-                    <button id="divide">÷</button>
-                    <button id="percentage">%</button>
-                    <button id="multiply">×</button>
+                    <button id="back">CE</button>
+                    <button id="%" class="percentage">%</button>
+                    <button id="*" class="multiply">×</button>
                 </div>
                 <div class="second">
                     <button id="7">7</button>
                     <button id="8">8</button>
                     <button id="9">9</button>
-                    <button id="square-root">√</button>
+                    <button id="/" class="divide">÷</button>
                 </div>
                 <div class="third">
                     <button id="4">4</button>
                     <button id="5">5</button>
                     <button id="6">6</button>
-                    <button id="subtract">-</button>
+                    <button id="-" class="subtract">-</button>
                 </div>
                 <div class="fourth">
                     <button id="1">1</button>
                     <button id="2">2</button>
                     <button id="3">3</button>
-                    <button id="add">+</button>
+                    <button id="+" class="add">+</button>
                 </div>
                 <div class="fifth">
                     <button id=".">.</button>
@@ -64,11 +64,8 @@
             </div>
             
         </div>
-
-        <footer>
-            <script src="https://kit.fontawesome.com/c123ad8ef2.js" crossorigin="anonymous"></script>
-            <script src = "DarkMode_LightMode.js"></script>
-            <script src= "Calculator_Output.js"></script>
-        </footer>   
+        <script src="https://kit.fontawesome.com/c123ad8ef2.js" crossorigin="anonymous"></script>
+        <script src = "DarkMode_LightMode.js"></script>
+        <script src= "Calculator_Output.js"></script>   
 </body>
 </html>
