--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <meta name="description" content="a web calculator that performs simple arithemtic operations such as addition, subtraction, and percentage">
+    <title>Web Calculator</title>
     <link type="text/css" rel="stylesheet" href="Calculator.css" />
     <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@500&display=swap" rel="stylesheet">
 </head>
